fix: overflow

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -21,6 +21,7 @@
     scroll-behavior: smooth;
 }
 body {
+    overflow-x: hidden; /* squiz clouds */
     color: var(--color-white);
     margin: 0;
     font-family: var(--font-brand);
